--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,4 +59,18 @@
     <string name="empty_email_msg">Please Enter Email Address.</string>
     <string name="empty_pass">Please Enter the password.</string>
     <string name="password_length">Password must be of atleast 6 character.</string>
+    <string name="no_internet_connection">Please check your internet connection.</string>
+    <string name="invalid_credentials">Email or password is not correct.</string>
+    <string name="invalid_user">It might seem you\'re try to sign with invalid credentials.</string>
+    <string name="something_went_wrong">Something went wrong. Please try after some time.</string>
+    <string name="email_already_used">The email address is already in use by another account.</string>
+    <string name="invalid_otp">Please enter the valid otp.</string>
+    <string name="op_cancel">operation canceled</string>
+    <string name="success_sign_up">your account is registered successfully.</string>
+    <string name="success_login">Login successful</string>
+    <string name="phone_code">+91-</string>
+    <string name="code_sent">OTP sent.</string>
+    <string name="dummy_name">username</string>
+    <string name="log_in_another">Log in to another account</string>
+    <string name="more_acc">More Accounts</string>
 </resources>
